--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -31,34 +31,26 @@
     </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="row">
-    <div class="col card mb-4 mt-3 left top">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-1">
-            <span>
-                {% if user.is_authenticated %}
-                <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-                    {% csrf_token %} {% if not liked %}
-                    <button type="submit" name="blogpost_id" value="{{post.slug}}" class="like-button" aria-label="Like post">
-                        <i class="far fa-heart"></i>
-                    </button>
-                    {% else %}
-                    <i class="far fa-heart"></i>
-                    {% endif %}
-                </form>
-                {% endif %}          
-                <!--Stop line break-->
-                {{ post.number_of_likes }} <i class="far fa-comment"></i>
-                <!--Stop line break-->
-                {{ post.number_of_comments }}
-            </span>
-          </div>
-        </div>
-      </div>
+<div class="icon-container">
+    <div>
+    {% if user.is_authenticated %}
+        <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+        {% csrf_token %} {% if not liked %}
+            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="like-button" aria-label="Like post">
+                <i class="far fa-heart"></i>
+            </button>
+        {% else %}
+            <i class="far fa-heart"></i>
+        {% endif %}
+         </form>
+        {% else %}
+        <i class="far fa-heart"></i>
+        {% endif %}
+        <span>{{ post.number_of_likes }}</span>
     </div>
+    <div>
+        <i class="far fa-comment"></i>
+        <span>{{ post.number_of_comments }}</span>
     </div>
 </div>
   <div class="row">
