--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,6 +337,7 @@ a {
 .icon-container {
     display: flex;
     align-items: center;
+    margin: 20px 20px 20px 30px;
 }
 
 .icon-container>div {
