--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         {% if "placeholder" in post.featured_image.url %}
         <img
           src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698399023/default2_u9ifqc.png"
-          alt=""
+          alt="Alert Image"
         />
         {% else %}
         <img src="{{ post.featured_image.url }}" />
