Corrected validator errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,8 @@
   <div class="right">
     <div class="content-box">
       <span>Your Community Pinboard!</span>
-      <h1>
-        Join our neighborhood's digital pinboard:
-        <h1 style="color: #c51616">Stay Alert!</h1>
-      </h1>
+      <h1>Join our neighborhood's digital pinboard:</h1>
+      <h1 style="color: #c51616">Stay Alert!</h1>
     </div>
   </div>
 </section>
