--- a/templates/base.html
+++ b/templates/base.html
@@ -2,96 +2,166 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Schöneberg Alert</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698399982/favicon_fpdgq2.ico">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698399982/favicon_fpdgq2.ico"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Navigation -->
     <div class="site-container">
-        <nav>
-            <div class="logo">
-                <a href="{% url 'home' %}" aria-label="Home"><h2>Schöneberg <i class="fa-regular fa-bell" style="color: #c51616"></i> Alert</h2></a>
-            </div>
-            <div class="menu">
-                <a href="{% url 'home' %}" aria-label="Home">Home</a>
-                {% if user.is_authenticated %}
-                <a href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
-                <a href="{% url 'new_post' %}" aria-label="Post an Alert">Post an <span style="color: #c51616">Alert</span></a>
-                {% else %}
-                <a href="{% url 'account_signup' %}" aria-label="Register">Register</a>
-                <a href="{% url 'account_login' %}" aria-label="Log in">Log in</a>
-                {% endif %}
-            </div>
-            <div class="mobile-menu" aria-label="Open mobile menu">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </nav>
-    </div>
-</body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                {% for message in messages %}
-                <div class="alert {{ message.tags }} alert-dismissable fade show" id="msg" role="alert">
-                    {{ message | safe }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-                    </button>
-                </div>
-                {% endfor %}
-            </div>
+      <nav>
+        <div class="logo">
+          <a href="{% url 'home' %}" aria-label="Home"
+            ><h2>
+              Schöneberg
+              <i class="fa-regular fa-bell" style="color: #c51616"></i> Alert
+            </h2></a
+          >
         </div>
+        <div class="menu">
+          <a href="{% url 'home' %}" aria-label="Home">Home</a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
+          <a href="{% url 'new_post' %}" aria-label="Post an Alert"
+            >Post an <span style="color: #c51616">Alert</span></a
+          >
+          {% else %}
+          <a href="{% url 'account_signup' %}" aria-label="Register"
+            >Register</a
+          >
+          <a href="{% url 'account_login' %}" aria-label="Log in">Log in</a>
+          {% endif %}
+        </div>
+        <div class="mobile-menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
     </div>
-        {% block content %}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          {% for message in messages %}
+          <div
+            class="alert {{ message.tags }} alert-dismissable fade show"
+            id="msg"
+            role="alert"
+          >
+            {{ message | safe }}
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"
+            ></button>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% block content %}
     <!-- Content Goes here -->
-        {% endblock content %}
+    {% endblock content %}
     <!-- Footer -->
     <footer>
-        <div class="site-container">
-            <div class="footer-box">
-                <div class="footer-menu">
-                    <ul>
-                        <li><a href="{% url 'home' %}" aria-label="Home">Home</a></li>
-                        {% if user.is_authenticated %}
-                        <li><a href="{% url 'account_logout' %}" aria-label="Logout">Logout</a></li>
-                        <li><a href="{% url 'new_post' %}" aria-label="Post an Alert">Post an Alert</a></li>
-                        {% else %}
-                        <li><a href="{% url 'account_signup' %}" aria-label="Register">Register</a></li>
-                        <li><a href="{% url 'account_login' %}" aria-label="Log in">Log in</a></li>
-                        {% endif %}
-                        <p>Created by Alessandro Rossi</p>
-                    </ul>
-                </div>
-                <div class="social-icons">
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (Opens in a new tab)"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (Opens in a new tab)"><i
-                            class="fa-brands fa-twitter"></i></a>
-                    <a href="https://instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (Opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-                </div>
-            </div>
+      <div class="site-container">
+        <div class="footer-box">
+          <div class="footer-menu">
+            <ul>
+              <li><a href="{% url 'home' %}" aria-label="Home">Home</a></li>
+              {% if user.is_authenticated %}
+              <li>
+                <a href="{% url 'account_logout' %}" aria-label="Logout"
+                  >Logout</a
+                >
+              </li>
+              <li>
+                <a href="{% url 'new_post' %}" aria-label="Post an Alert"
+                  >Post an Alert</a
+                >
+              </li>
+              {% else %}
+              <li>
+                <a href="{% url 'account_signup' %}" aria-label="Register"
+                  >Register</a
+                >
+              </li>
+              <li>
+                <a href="{% url 'account_login' %}" aria-label="Log in"
+                  >Log in</a
+                >
+              </li>
+              {% endif %}
+              <li>Created by Alessandro Rossi</li>
+            </ul>
+          </div>
+          <div class="social-icons">
+            <a
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Facebook page (Opens in a new tab)"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Twitter page (Opens in a new tab)"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit our Instagram page (Opens in a new tab)"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </div>
         </div>
+      </div>
     </footer>
     <script src="{% static 'script/script.js' %}"></script>
-    <script>setTimeout(function () {
-            let messages = document.getElementById("msg");
-            let alert = new bootstrap.Alert(messages);
-            alert.close();
-        }, 2000);</script>
-    <script src="https://kit.fontawesome.com/3944192ca3.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
+    <script>
+      setTimeout(function () {
+        let messages = document.getElementById("msg");
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
+      }, 2000);
+    </script>
+    <script
+      src="https://kit.fontawesome.com/3944192ca3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
