--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %} {% load crispy_forms_tags %}
 
-<div class="masthead" aria-label="Alert Information">
+<div class="masthead">
   <div class="container">
     <div class="row g-0">
       <div class="col-md-6 masthead-text">
@@ -10,10 +10,16 @@
         </p>
         <p class="card-text">{{ post.content | safe }}</p>
         {% if user.is_authenticated and user == post.author %}
-        <a href="{% url 'edit_post' post.slug %}" class="btn btn-primary" aria-label="Edit this post"
+        <a
+          href="{% url 'edit_post' post.slug %}"
+          class="btn btn-primary"
+          aria-label="Edit this post"
           >Edit</a
         >
-        <a href="{% url 'post_delete' post.slug %}" class="btn btn-danger" aria-label="Delete this post"
+        <a
+          href="{% url 'post_delete' post.slug %}"
+          class="btn btn-danger"
+          aria-label="Delete this post"
           >Delete</a
         >
         {% endif %}
@@ -32,68 +38,73 @@
   </div>
 </div>
 <div class="icon-container">
-    <div>
+  <div>
     {% if user.is_authenticated %}
-        <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-        {% csrf_token %} {% if not liked %}
-            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="like-button" aria-label="Like post">
-                <i class="far fa-heart"></i>
-            </button>
-        {% else %}
-            <i class="far fa-heart"></i>
-        {% endif %}
-         </form>
-        {% else %}
+    <form
+      class="d-inline"
+      action="{% url 'post_like' post.slug %}"
+      method="POST"
+    >
+      {% csrf_token %} {% if not liked %}
+      <button
+        type="submit"
+        name="blogpost_id"
+        value="{{post.slug}}"
+        class="like-button"
+        aria-label="Like post"
+      >
         <i class="far fa-heart"></i>
-        {% endif %}
-        <span>{{ post.number_of_likes }}</span>
-    </div>
-    <div>
-        <i class="far fa-comment"></i>
-        <span>{{ post.number_of_comments }}</span>
-    </div>
-</div>
-  <div class="row">
-    <div class="col">
-      <hr />
-    </div>
+      </button>
+      {% else %}
+      <i class="far fa-heart"></i>
+      {% endif %}
+    </form>
+    {% else %}
+    <i class="far fa-heart"></i>
+    {% endif %}
+    <span>{{ post.number_of_likes }}</span>
   </div>
-  <div class="row" id="comments-box">
-    <div class="col-md-8 card mb-4 mt-3">
-      <h3>Comments:</h3>
-      <div class="card-body">
-        {% for comment in comments %}
-        <div class="comments" style="padding: 10px">
-          <p class="font-weight-bold">
-            {{ comment.name }}
-            <span class="text-muted font-weight-normal">
-              {{ comment.created_on }}
-            </span>
-            wrote:
-          </p>
-          {{ comment.body | linebreaks }}
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-    <div class="col-md-4 card mb-4 mt-3">
-      <div class="card-body">
-        {% if commented %}
-        <div class="alert alert-success" role="alert">
-          Your comment is awaiting approval
-        </div>
-        {% else %} {% if user.is_authenticated %}
-
-        <h3>Leave a comment:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form method="post" style="margin-top: 1.3em">
-          {{ comment_form | crispy }} {% csrf_token %}
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        {% endif %} {% endif %}
-      </div>
-    </div>
+  <div>
+    <i class="far fa-comment"></i>
+    <span>{{ post.number_of_comments }}</span>
   </div>
 </div>
-
+<div class="row">
+  <div class="col"></div>
+</div>
+<div class="row" id="comments-box">
+  <div class="col-md-8 card mb-4 mt-3">
+    <h3>Comments:</h3>
+    <div class="card-body">
+      {% for comment in comments %}
+      <div class="comments" style="padding: 10px">
+        <p class="font-weight-bold">
+          {{ comment.name }}
+          <span class="text-muted font-weight-normal">
+            {{ comment.created_on }}
+          </span>
+          wrote:
+        </p>
+        {{ comment.body | linebreaks }}
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="col-md-4 card mb-4 mt-3">
+    <div class="card-body">
+      {% if commented %}
+      <div class="alert alert-success" role="alert">
+        Your comment is awaiting approval
+      </div>
+      {% else %} {% if user.is_authenticated %}
+      <h3>Leave a comment:</h3>
+      <p>Posting as: {{ user.username }}</p>
+      <form method="post" style="margin-top: 1.3em">
+        {{ comment_form | crispy }} {% csrf_token %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      {% endif %} {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock content %}
