Corrected python code

--- a/templates/base.html
+++ b/templates/base.html
@@ -117,8 +117,8 @@
                 >
               </li>
               {% endif %}
-              <li>Created by Alessandro Rossi</li>
             </ul>
+            <p>Created by Alessandro Rossi</p>
           </div>
           <div class="social-icons">
             <a
