--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -29,9 +29,14 @@
         <img
           src="https://res.cloudinary.com/dg6tnws5o/image/upload/v1698399023/default2_u9ifqc.png"
           width="100%"
+          alt="Placeholder Image"
         />
         {% else %}
-        <img src=" {{ post.featured_image.url }}" width="100%" />
+        <img
+          src=" {{ post.featured_image.url }}"
+          width="100%"
+          alt="Featured Image"
+        />
         {% endif %}
       </div>
     </div>
