--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #202020;
     --secondary-color: #f4f7fc;
-    --grey: #a6a6a688;
+    --grey: #3b3838;
     --category-color: #ffffff;
 }
 
