Added inline comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Head -->
   <head>
     <title>Schöneberg Alert</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -71,6 +72,7 @@
         </div>
       </nav>
     </div>
+    <!-- Messages -->
     <div class="container">
       <div class="row">
         <div class="col-md-8 offset-md-2">
@@ -154,6 +156,7 @@
         </div>
       </div>
     </footer>
+    <!-- Script -->
     <script src="{% static 'script/script.js' %}"></script>
     <script>
       setTimeout(function () {
