--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   <a href="{% url 'home' %}" aria-label="Clear Filter">Clear Filter</a>
   {% endif %}
 </div>
-<!-- New Blog Section-->
+<!-- All Alerts-->
 <section id="blog" aria-label="Blog Posts">
   <div class="blog-container">
     {% for post in post_list %}
