--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,7 +251,7 @@ a {
 .social-icons i {
     color: var(--secondary-color);
     font-size: 16px;
-    border: 1px slid var(--secondary-color);
+    border: 1px solid var(--secondary-color);
     border-radius: 50%;
     padding: 8px;
 }
@@ -374,7 +374,6 @@ a {
 
     #login {
         padding: 30px 0 30px 0;
-        border: 0 100px 0 100px;
     }
 }
 
